# eval-workbench

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  monitoring.yml  monitoring_langfuse.yml  monitoring_slack.yml  populate_athena_kpis.yml
deep-dives/: index.html
deep-dives/architecture/: index.html
deep-dives/database/: index.html
deep-dives/schema/: index.html
docs/: index.md
docs/deep-dives/: architecture.md  database.md  index.md  schema.md
docs/getting-started/: index.md
docs/guides/: athena-langfuse.md  configuration.md  graph-ingestion-pipeline.md  index.md  memory-dashboard-spec.md  memory.md  monitoring-config.md  monitoring.md  scripts.md  shared-langfuse.md  slack.md  underwriting_composite_submetric_prompts.md
docs/metric-registry/: index.md
docs/metric-registry/athena/: index.md
docs/metric-registry/athena/recommendation/: citation_accuracy.md  citation_fidelity.md  decision_quality.md  index.md  refer_reason.md  referral_reason.md  referral_reason_analysis.md  underwriting_completeness.md  underwriting_faithfulness.md  underwriting_rules.md
docs/metric-registry/shared/: index.md
docs/metric-registry/shared/slack/: acceptance.md  composite.md  engagement.md  escalation.md  feedback.md  frustration.md  (+13 more)
docs/overrides/: main.html
docs/stylesheets/: extra.css
getting-started/: index.html
guides/: index.html
guides/athena-langfuse/: index.html
guides/configuration/: index.html
guides/graph-ingestion-pipeline/: index.html
guides/memory/: index.html
guides/memory-dashboard-spec/: index.html
guides/monitoring/: index.html
guides/monitoring-config/: index.html
guides/scripts/: index.html
guides/shared-langfuse/: index.html
guides/slack/: index.html
guides/underwriting_composite_submetric_prompts/: index.html
metric-registry/: index.html
metric-registry/athena/: index.html
metric-registry/athena/recommendation/: index.html
metric-registry/shared/: index.html
metric-registry/shared/slack/: index.html
scripts/: create_athena_kpi_objects.py  create_evaluation_tables.py  create_rule_extractions_table.py  ingest_knowledge_sources.py  populate_athena_kpis.py  test_ai_output_fix.py
scripts/monitoring/: check_setup.py  monitoring_dry_run.py  monitoring_entrypoint.py  run_once.py
search/: search_index.json
src/eval_workbench/: __init__.py
src/eval_workbench/shared/: config.py  settings.py
src/implementations/athena/: settings.py  utils.py
src/shared/: settings.py
src/shared/database/: README.md  evaluation_upload.py  neon.py
src/shared/langfuse/: README.md  prompt.py  trace.py  utils.py  webhook.py
src/shared/metrics/: __init__.py  flattening.py  slack_compliance.py
src/shared/monitoring/: __init__.py  monitor.py  monitoring.yaml.example  sampling.py  scheduler.py  scored_items.py  sources.py
src/shared/slack/: README.md  exporter.py  service.py
stylesheets/: extra.css
tests/: manual_feedback_analyzer.py  test_feedback_analyzer.py
tests/shared/database/: test_evaluation_upload.py  test_neon_connection.py
tests/shared/monitoring/: test_extractor_resolution.py  test_slack_neon_join_source.py
(+161 files in other folders)
